# auth_service_cpp

./: .gitignore  CMakeLists.txt  Makefile  meson.build  users.json
src/: auth_service.cpp  colors.h  includes.hpp
src/AuthService/: AuthService.cpp  AuthService.hpp
src/auth/: auth.cpp  auth.hpp  verify_auth.cpp
src/libs/: jwt.hpp
src/security/: HashPassword.hpp  cors.cpp  cors.hpp
src/users/: access_request.cpp  add_user.cpp  change_password.cpp  change_user.cpp  delete_user.cpp  get_all_users.cpp  get_user.cpp  users.cpp  users.hpp
src/web/: index.html
src/web/css/: header.css  index.css  loginform.css  message.css  userstable.css
src/web/js/: add_user.js  change_password.js  change_user.js  del_user.js  get_all_users.js  login.js  message.js  routes.js  security.js  window.js
toolchain_files/: arm_uclibc
web/: index.html
web/css/: index.css  loginform.css
web/js/: login.js  routes.js
